style -overflow fix

--- a/route/projects/style.css
+++ b/route/projects/style.css
@@ -24,12 +24,14 @@
 }
 .container {
   height: 100vh;
+  align-items: center;
   display: flex;
   flex-wrap: wrap;
 }
 
 
 .content {
+    
 display: flex;
 flex-direction: column;
   position: relative;
